@@ -35,6 +35,10 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
   * Use $(GLIBC_VERSION) for shlib, instead of defining the version in a 
     separate shlibver file.
   * Remove completely outdated README, README.source and TODO files.
+  * rules.d/debhelper.mk: use the default compression format for libc6,
+    libc-bin and multiarch-support. Nowadays deboostrap is able to handle
+    the xz format and modern distributions also support it. Anyway almost
+    all packages installed by debootstrap are now using the xz format.
 
   [ Steven Chamberlain ]
   * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
